2002-08-27  Alan Modra  <amodra@bigpond.net.au>

	* ld-mmix/b-nosym.d: Revert last change.

2002-08-26  Alan Modra  <amodra@bigpond.net.au>

	* ld-mmix/b-nosym.d: Adjust for "no symbols" on stdout.

2002-08-23  Stephen Clarke <stephen.clarke@superh.com>

	* ld-sh/sh64/rd-sh64.exp: New framework file.
	* ld-sh/sh64/init-cmpct.d, ld-sh/sh64/init-media.d,
	ld-sh/sh64/init64.d, ld-sh/sh64/init.s: New tests for
	correct setting of ISA bit for init and fini entry-points.

2002-08-16  Stephen Clarke <stephen.clarke@superh.com>

	* ld-sh/sh64/sh64.exp: Add dlsection.
	* ld-sh/sh64/dlsection-1.s, ld-sh/sh64/dlsection.sd: New.

2002-08-16  Alan Modra  <amodra@bigpond.net.au>

	* ld-discard/discard.exp: xfail targets using generic linker.
	* ld-discard/extern.d: Allow "data" to be reduced to a section sym.

2002-08-15  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/libdso-4.d, ld-cris/undef1.d: New test.

2002-08-13  H.J. Lu <hjl@gnu.org>

	* ld-elfvers/vers.exp: Add vers23c and vers23d.

	* ld-elfvers/vers23c.ver: New.
	* ld-elfvers/vers23d.dsym: New.

2002-08-12  H.J. Lu <hjl@gnu.org>

	* ld-elfvers/vers.exp: Add vers23.

	* ld-elfvers/vers23.c: New.
	* ld-elfvers/vers23.dsym: New.
	* ld-elfvers/vers23.ver: New.
	* ld-elfvers/vers23a.c: New.
	* ld-elfvers/vers23a.dsym: New.
	* ld-elfvers/vers23a.map: New.
	* ld-elfvers/vers23a.sym: New.
	* ld-elfvers/vers23a.ver: New.
	* ld-elfvers/vers23b.c: New.
	* ld-elfvers/vers23b.dsym: New.
	* ld-elfvers/vers23b.map: New.
	* ld-elfvers/vers23b.ver: New.

2002-08-12  Stephen Clarke <stephen.clarke@superh.com>

	* ld-sh/sh64/abi32.xd: Adjust whitespace in elf32 section
	listing.
	* ld-sh/sh64/cmpct1.xd, ld-sh/sh64/mix1.xd, ld-sh/sh64/mix2.xd,
	ld-sh/sh64/rel32.xd, ld-sh/sh64/shdl32.xd: Likewise.
	* ld-sh/sh64/abi32.xd: Adjust as type of linker-script-symbols
	is no longer set to object.
	* ld-sh/sh64/abi64.xd, ld-sh/sh64/cmpct1.xd, ld-sh/sh64/crange1.rd,
	ld-sh/sh64/crange2.rd, ld-sh/sh64/crange3-cmpct.rd,