@@ -41,6 +41,7 @@ for { set i 0 } { $i < [llength $test_list] } { incr i } {
     # We need to strip the ".d", but can leave the dirname.
     verbose [file rootname [lindex $test_list $i]]
     # These fail because they use the generic linker.
-    setup_xfail "arc-*" "d30v-*" "dlx-*" "i960-*" "or32-*" "pj-*"
+    setup_xfail "arc-*" "d30v-*" "dlx-*" "i960-*" "m6812-*" "m68hc12-*"
+    setup_xfail "or32-*" "pj-*"
     run_dump_test [file rootname [lindex $test_list $i]]
 }
