@@ -1,6 +1,6 @@
 #...
 Linker script and memory map
-
+#...
  *0x0*010001 *\. = 0x10001
  *0x0*010001 *foo = \.
  *0x0*010201 *\. = \(\. \+ 0x200\)
